--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,10 @@
-deploy.ant.properties.file=/home/ccslearner/.netbeans/8.1/tomcat80.properties
-j2ee.server.domain=/home/ccslearner/.netbeans/8.1/apache-tomcat-8.0.27.0_base
-j2ee.server.home=/home/ccslearner/apache-tomcat-8.0.27
-j2ee.server.instance=tomcat80:home=/home/ccslearner/apache-tomcat-8.0.27:base=apache-tomcat-8.0.27.0_base
+deploy.ant.properties.file=C:\\Users\\hans\\AppData\\Roaming\\NetBeans\\19\\config\\GlassFishEE6\\Properties\\gfv3-1246123372.properties
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/hans/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=C:/Users/hans/GlassFish_Server/glassfish
+j2ee.server.instance=[C:\\Users\\hans\\GlassFish_Server\\glassfish;C:\\Users\\hans\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv510ee8:localhost:4848
+j2ee.server.middleware=C:/Users/hans/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=/home/ccslearner/.netbeans/8.1/build.properties
+user.properties.file=C:\\Users\\hans\\AppData\\Roaming\\NetBeans\\19\\build.properties
