--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -29,6 +30,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.mysql-connector-j-8.2.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\Lars\\Documents\\School Folder\\mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,13 +45,16 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv510ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.2.0.jar}
+    ${file.reference.mysql-connector-j-8.2.0.jar}:\
+    ${file.reference.mysql-connector-j-8.2.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselink.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
