--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-j-8.2.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-8.2.0.jar
-file.reference.mysql-connector-j-8.2.0.jar-1=C:\\Users\\Lars\\Documents\\School Folder\\mysql-connector-j-8.2.0.jar
+file.reference.mysql-connector-j-8.2.0.jar-2=..\\..\\..\\Downloads\\mysql-connector-j-8.2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,8 +44,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv510ee8
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.2.0.jar}:\
-    ${file.reference.mysql-connector-j-8.2.0.jar-1}
+    ${file.reference.mysql-connector-j-8.2.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
